Added metadata for org.apache.kafka:kafka-clients:3.5.1